src/test/ui/attr-eq-token-tree.stderr
error: unexpected token: `!`
  --> $DIR/attr-eq-token-tree.rs:1:13
   |
LL | #[my_attr = !]
   |             ^

error: aborting due to previous error

