src/test/ui/attr-eq-token-tree.rs
#[my_attr = !] //~ ERROR unexpected token: `!`
fn main() {}
